# app/Http/Controllers/ServiceController.php
@@ -4,18 +4,25 @@ namespace App\Http\Controllers;
 
 use App\Http\Resources\ServiceResource;
 use App\Models\Service;
-use Illuminate\Http\Request;
+use Illuminate\Http\JsonResponse;
 
 class ServiceController extends Controller
 {
     /**
      * @OA\Get(
      *     path="/services",
-     *     summary="Get rating list with filters",
+     *     summary="Get service list",
      *     security={ {"bearerAuth" : {}}},
      *     tags={"Services"},
-     *     @OA\Response(response=200,description="Return filtered rating list"),
-     *     @OA\Response(response=422, description="Unprocessable entity!"),
+     *     @OA\Response(
+     *          response=200,
+     *          description="service list",
+     *          @OA\JsonContent(
+     *              type="array",
+     *              @OA\Items(ref="#/components/schemas/ServiceResource")
+     *          ),
+     *     ),
+     *     @OA\Response(response=401, description="Protected endpoint only logged in users."),
      *     @OA\Response(response=500, description="Internal server error!")
      * )
      */
