# app/Http/Requests/BookScheduleRequest.php
@@ -4,16 +4,22 @@ namespace App\Http\Requests;
 
 use Illuminate\Foundation\Http\FormRequest;
 /**
- * @OA\RequestBody(
- *     request="BookScheduleRequest",
- *     required=true,
- *     description="Book a schedule slot",
- *     @OA\JsonContent(
- *         required={"serviceId", "from"},
- *         @OA\Property(property="serviceId", type="integer", example=1),
- *         @OA\Property(property="from", type="string", format="time", example="14:00")
- *     )
- * )
+ * @OA\Schema(
+ *       schema="BookScheduleRequest",
+ *       title="BookScheduleRequest",
+ *       description="Schedule data",
+ *       type="object",
+ *       @OA\Property(
+ *           property="serviceId",
+ *           type="integer",
+ *           example="1"
+ *      ),
+ *      @OA\Property(
+ *           property="from",
+ *           type="string",
+ *           example="08:00:00"
+ *      )
+ *  )
  */
 class BookScheduleRequest extends FormRequest
 {
@@ -25,7 +31,7 @@ class BookScheduleRequest extends FormRequest
     public function rules(): array
     {
         return [
-            'serviceId' => 'required|integer|exists:schedules,service_id',
+            'serviceId' => 'required|integer|exists:services,id',
             'from' => 'required|exists:schedules,from',
         ];
     }
