# app/Http/Resources/ScheduleResource.php
@@ -4,7 +4,34 @@ namespace App\Http\Resources;
 
 use Illuminate\Http\Request;
 use Illuminate\Http\Resources\Json\JsonResource;
-
+/**
+ *
+ * @OA\Schema(
+ *      title="ScheduleResource",
+ *      description="Contains schedule data",
+ *      type="object",
+ *      @OA\Property(
+ *          property="id",
+ *          type="integer",
+ *          example=1,
+ *      ),
+ *      @OA\Property(
+ *          property="from",
+ *          type="string",
+ *          example="08:00:00",
+ *      ),
+ *      @OA\Property(
+ *          property="to",
+ *          type="string",
+ *          example="09:00:00",
+ *      ),
+ *      @OA\Property(
+ *          property="user",
+ *          type="object",
+ *          ref="#/components/schemas/UserResource"
+ *       ),
+ * )
+ */
 class ScheduleResource extends JsonResource
 {
     /**
@@ -17,7 +44,8 @@ class ScheduleResource extends JsonResource
         return [
             'id' => $this->id,
             'from' => $this->from,
-            'to' => $this->to
+            'to' => $this->to,
+            'user' => UserResource::make($this->user)
         ];
     }
 }
