# app/Http/Resources/ServiceResource.php
@@ -5,6 +5,29 @@ namespace App\Http\Resources;
 use Illuminate\Http\Request;
 use Illuminate\Http\Resources\Json\JsonResource;
 
+/**
+ *
+ * @OA\Schema(
+ *      title="ServiceResource",
+ *      description="Contains service data",
+ *      type="object",
+ *      @OA\Property(
+ *          property="id",
+ *          type="integer",
+ *          example=1,
+ *      ),
+ *      @OA\Property(
+ *          property="title",
+ *          type="string",
+ *          example="Massage 1",
+ *      ),
+ *      @OA\Property(
+ *          property="price",
+ *          type="string",
+ *          example=10000,
+ *      )
+ * )
+ */
 class ServiceResource extends JsonResource
 {
     /**
@@ -16,7 +39,7 @@ class ServiceResource extends JsonResource
     {
         return [
             'id' => $this->id,
-            'title' => $this->from,
+            'title' => $this->title,
             'price' => $this->currentPrice
         ];
     }
